--- a/code/css/category.css
+++ b/code/css/category.css
@@ -89,6 +89,11 @@ footer a .fa {
   margin-left: -30px;
 }
 
+/* 选中按钮的颜色 */
+.mui-text-primary {
+  color: #007aff;
+}
+
 /*  */
 .pyg-views {
   overflow: hidden;
