商品详情页的动态渲染与模板变量

--- a/code/css/category.css
+++ b/code/css/category.css
@@ -84,6 +84,7 @@ footer a .fa {
   -webkit-animation: fa-spin 1s infinite linear;
           animation: fa-spin 1s infinite linear;
   position: fixed;
+  color: pink;
   top: 40%;
   left: 50%;
   margin-left: -30px;
