--- a/code/css/_common.scss
+++ b/code/css/_common.scss
@@ -77,6 +77,7 @@ footer{
     z-index: 101;
     animation: fa-spin 1s infinite linear;
     position: fixed;
+    color: pink;
     top: 40%;
     left: 50%;
     margin-left: -30px;
