--- a/code/css/good_list.css
+++ b/code/css/good_list.css
@@ -83,6 +83,7 @@ footer a .fa {
   -webkit-animation: fa-spin 1s infinite linear;
           animation: fa-spin 1s infinite linear;
   position: fixed;
+  color: pink;
   top: 40%;
   left: 50%;
   margin-left: -30px;
@@ -156,6 +157,11 @@ body {
 }
 
 /* 主体内容 */
+.pyg-views {
+  position: relative;
+  overflow: hidden;
+}
+
 .pyg-views .good-list-main {
   margin: 0;
   padding: 0;
